--- a/includes/mariadb/templates/my_cnf.j2
+++ b/includes/mariadb/templates/my_cnf.j2
@@ -24,8 +24,11 @@ general_log_file = /var/log/mysql/mysql.log
 general_log = 0
 innodb_buffer_pool_size = 1024M
 innodb_buffer_pool_instances = 1
+innodb_default_row_format = dynamic
+innodb_file_format = Barracuda
 innodb_flush_log_at_trx_commit = 2
 innodb_log_buffer_size = 32M
+innodb_large_prefix = 1
 innodb_max_dirty_pages_pct = 90
 innodb_file_per_table = 1
 innodb_open_files = 400
