--- a/includes/phplist/templates/config_php.j2
+++ b/includes/phplist/templates/config_php.j2
@@ -1,4 +1,5 @@
 <?php
+$database_host = 'localhost';
 $database_socket = '/var/run/mysqld/mysqld.sock';
 $database_name = '{{ db_name }}';
 $database_user = '{{ db_username }}';
